<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/loginCard"
    app:cardCornerRadius="@dimen/loginCardRadius"
    android:elevation="5dp"
    android:layout_gravity="center"
    android:layout_marginTop="@dimen/loginViewsMargin"
    android:layout_marginBottom="@dimen/loginViewsMargin"
    android:background="@color/whiteCardColor">

    <LinearLayout
        style="@style/linearParent"
        android:layout_gravity="center"
        android:padding="@dimen/loginViewsMargin">

        <TextView
            style="@style/headerTextPrimary"
            android:text="@string/register"
            android:layout_marginTop="@dimen/loginViewsMargin"/>

        <TextView
            style="@style/viewParent"
            android:text="Enter your account details below:"
            android:textColor="@color/primaryTextColor"
            android:textSize="@dimen/newsMoreTextSize"
            android:layout_gravity="center"
            android:id="@+id/registerStatusMessage"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="0dp"
            />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/parent"
            android:id="@+id/registerUsername"
            android:layout_marginTop="8px">
            <EditText
                android:id="@+id/registerUsernameEditText"
                style="@style/modifiedEditText"
                android:inputType="text"
                android:maxLines="1"
                android:hint="Name"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/parent"
            android:id="@+id/registerPhone"
            android:layout_marginTop="@dimen/signup_text_margin_top">
            <EditText
                android:id="@+id/registerPhoneEditText"
                style="@style/modifiedEditText"
                android:inputType="text"
                android:maxLines="1"
                android:hint="Mobile Number"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/parent"
            android:id="@+id/registerEmail"
            android:layout_marginTop="@dimen/signup_text_margin_top">
            <EditText
                android:id="@+id/registerEmailEditText"
                style="@style/modifiedEditText"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:hint="@string/login_email_hint"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/parent"
            android:id="@+id/password1"
            android:layout_marginTop="@dimen/signup_text_margin_top">
            <EditText
                android:id="@+id/password1EditText"
                style="@style/modifiedEditText"
                android:hint="@string/login_password_hint"
                android:maxLines="1"
                android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/parent"
            android:id="@+id/password2"
            android:layout_marginTop="@dimen/signup_text_margin_top">
            <EditText
                android:id="@+id/password2EditText"
                style="@style/modifiedEditText"
                android:hint="Retype Password"
                android:maxLines="1"
                android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            style="@style/loginButton"
            android:layout_gravity="center"
            android:id="@+id/registerButton"
            android:layout_marginTop="20dp"
            android:text="Register" />

        <TextView
            style="@style/parent"
            android:textAlignment="center"
            android:id="@+id/backToLogin"
            android:textStyle="bold"
            android:textColor="@color/primaryTextColor"
            android:text="@string/signup_login_hint"
            android:layout_marginTop="@dimen/loginViewsMargin"/>

    </LinearLayout>
</androidx.cardview.widget.CardView>