<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/loginCard"
    app:cardCornerRadius="@dimen/loginCardRadius"
    android:elevation="5dp"
    android:layout_gravity="center"
    android:layout_marginTop="@dimen/loginViewsMargin"
    android:layout_marginBottom="@dimen/loginViewsMargin"
    android:background="@color/whiteCardColor">

    <LinearLayout
        style="@style/linearParent"
        android:layout_gravity="center"
        android:padding="@dimen/loginViewsMargin">

        <TextView
            style="@style/headerTextPrimary"
            android:text="Login"
            android:layout_marginTop="@dimen/loginViewsMargin"
            android:layout_marginBottom="0dp"/>

        <TextView
            style="@style/viewParent"
            android:text=""
            android:textColor="@color/primaryTextColor"
            android:textSize="@dimen/newsMoreTextSize"
            android:layout_gravity="center"
            android:id="@+id/statusMessage"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="0dp"
            />


        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputEmail"
                style="@style/parent"
                android:layout_weight="1"
                android:layout_marginTop="15dp">
                <EditText
                    android:id="@+id/editTextEmail"
                    style="@style/modifiedEditText"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:hint="@string/login_email_hint"/>
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                style="@style/viewParent"
                android:text="Get OTP"
                android:id="@+id/loginOTP"
                android:textColor="@color/primaryTextColor"
                android:textSize="@dimen/newsMoreTextSize"
                android:layout_gravity="right|bottom"
                android:layout_width="wrap_content"
                android:layout_marginLeft="20px"
                android:layout_marginTop="10dp"/>
        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputPassword"
            android:layout_width="match_parent"
            style="@style/parent"
            android:layout_marginTop="@dimen/loginViewsMargin">
            <EditText
                android:id="@+id/editTextPassword"
                style="@style/modifiedEditText"
                android:hint="@string/login_password_hint"
                android:maxLines="1"
                android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>


        <TextView
            android:id="@+id/forgotPasswordLogin"
            style="@style/viewParent"
            android:text="Forgot Password?"
            android:textColor="@color/primaryTextColor"
            android:textSize="@dimen/newsMoreTextSize"
            android:layout_gravity="end"
            android:layout_marginTop="10dp"/>

        <TextView
            style="@style/viewParent"
            android:text="Login With Phone Number"
            android:textColor="@color/primaryTextColor"
            android:textSize="@dimen/newsMoreTextSize"
            android:layout_gravity="end"
            android:id="@+id/switchLogin"
            android:layout_marginTop="10dp"/>

        <Button
            android:id="@+id/cirLoginButton"
            style="@style/loginButton"
            android:text="Login"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/loginViewsMargin"/>

        <TextView
            style="@style/parent"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textColor="@color/primaryTextColor"
            android:text="@string/login_signup_hint"
            android:id="@+id/signup"
            android:layout_marginTop="@dimen/loginViewsMargin"/>


    </LinearLayout>
</androidx.cardview.widget.CardView>